--- a/src/main/resources/templates/jk/seller/join.html
+++ b/src/main/resources/templates/jk/seller/join.html
@@ -218,8 +218,8 @@
         //     }
 
             // form의 내용을 button을 눌러 강제로 submit 수행!
-            document.getElementById('form').submit();
-        }
+        //     document.getElementById('form').submit();
+        // }
 
 
         function sample6_execDaumPostcode() {
