--- a/src/main/resources/templates/se/customer/findidok.html
+++ b/src/main/resources/templates/se/customer/findidok.html
@@ -26,7 +26,7 @@
         
         <div class="container">
             <th:block th:text="|${name} 고객님의 아이디는 ${id} 입니다|"></th:block>
-            <a th:href="@{/cutomer/login.do}">로그인하기</a>
+            <a th:href="@{/customer/login.do}">로그인하기</a>
         </div>
         
     </div>
