--- a/src/main/resources/templates/km/customer/sample.html
+++ b/src/main/resources/templates/km/customer/sample.html
@@ -25,9 +25,13 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eaque illum doloremque officiis facilis, iure magni optio nobis earum placeat ab tempore dolore voluptatibus! Corrupti distinctio perspiciatis quo! Placeat, optio?</p>
     </div>
 
+    
+
+    <div th:text="${list[0].get('NO')}"></div>
+
+
+
     <!-- footer -->
-
-
     <th:block th:replace="~{/km/customer/footer :: footerHTML}"></th:block>
 
 
