--- a/src/main/resources/templates/km/customer/selectitem.html
+++ b/src/main/resources/templates/km/customer/selectitem.html
@@ -20,53 +20,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- <style>
-        .tablediv {
-            padding: 0 !important;
-            margin-top: 10px !important;
-        }
-        .scrolltable {
-            table-layout: fixed;
-            border-collapse: collapse;
-            /* border: 1px solid #888; */
-            
-        }
 
-        /* 행 장식 */
-        .scrolltable th,
-        .scrolltable td {
-            padding: 10px;
-            text-align: left;
-            width: 100px;
-            text-align: center;
-            font-size: 0.875em;
-        }
-
-        .scrolltable tbody {
-            background-color: #f8f7f5;
-        }
-
-        .scrolltable thead {
-            display: block;
-            background: rgb(148, 175, 160);
-            color: #fff;
-        }
-
-
-        .scrolltable tbody {
-            display: block;
-            overflow: auto;
-            height: 250px;
-        }
-
-    </style> -->
-
-
+   
     <script th:src="@{/js/bootstrap.min.js}"></script>
     <!-- axios (https://cdnjs.com/libraries/axios) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js"
         integrity="sha512-nnNHpffPSgINrsR8ZAIgFUIMexORL5tPwsfktOTxVYSv+AUAILuFYWES8IHl+hhIhpFGlKvWFiz9ZEusrPcSBQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 
 </head>
 
@@ -83,12 +44,15 @@
                         <!-- Breadcrumbs -->
                         <div class="breadcrumbs d-flex flex-row align-items-center">
                             <ul>
-                                <li><span>대분류</span></li>
+                                <li><span th:text="${purchaseList[0].lCategoryName}"></span></li>
                                 <li>
-                                    <span><i class="fa fa-angle-right" aria-hidden="true"></i>중분류</span>
+                                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                    <span th:text="${purchaseList[0].mCategoryName}"></span>
                                 </li>
                                 <li class="active">
-                                    <a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i>소분류</a>
+                                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                    <a href="#" th:text="${purchaseList[0].sCategoryName}"></a>
+                                    <!-- /customer/item/selectlist.do?scode=4 -->
                                 </li>
                             </ul>
                         </div>
@@ -103,8 +67,11 @@
                             <div class="row">
                                 <div class="col-lg-9 image_col order-lg-2 order-1">
                                     <div class="single_product_image">
-                                        <div class="single_product_image_background"
+                                        <!-- <div class="single_product_image_background"
                                             th:style="'background-image:url('+ @{/images/km/single_2.jpg} +');height: 500px;mt-5'">
+                                        </div> -->
+                                        <div class="single_product_image_background" style="height: 500px">
+                                            <img th:src="${imageList[0]}" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -117,16 +84,16 @@
                     <div class="col-lg-6">
                         <div class="product_details">
                             <div class="product_details_title">
-                                <p th:text="${item.sellername}"></p>
-                                <h2 th:text="${item.name}"></h2>
-                                <div class="product_price"
-                                    th:text="${#numbers.formatInteger(item.price, 3, 'COMMA') + '원'}">$495.00</div>
+                                <p th:text="${purchaseList[0].sellerName}"></p>
+                                <h2 th:text="${purchaseList[0].itemName}"></h2>
+                                <div class="product_price" th:text="${#numbers.formatInteger(purchaseList[0].itemPrice, 3, 'COMMA') + '원'}"></div>
                             </div>
                             <!-- 열린 공구 영역 ~ -->
                             <div class="tablediv">
                                 <table class="table table-hover scrolltable">
                                     <thead>
                                         <tr>
+                                            <th scope="col">번호</th>
                                             <th scope="col">참여인원</th>
                                             <th scope="col">남은인원</th>
                                             <th scope="col">수령지점</th>
@@ -135,16 +102,8 @@
                                             <th scope="col"></th>
                                         </tr>
                                     </thead>
-                                    <tbody>
-                                        <tr th:each="obj : ${purchaseList}">
-                                            <td th:text="${obj.participant}"></td>
-                                            <td th:text="${obj.remaingPerson}"></td>
-                                            <td th:text="${obj.storagename}"></td>
-                                            <td th:text="${item.price}/${obj.participant}"></td>
-                                            <!-- <td th:text="${#dates.format(obj.deadline, 'yyyy.MM.dd')}"></td> -->
-                                            <td id="clock"></td>
-                                            <td><button class="btn participate-btn">참여</button></td>
-                                        </tr>
+                                    <tbody id="tbody">
+
                                     </tbody>
                                 </table>
                             </div>
@@ -152,13 +111,6 @@
 
                             <div
                                 class="quantity d-flex flex-column flex-sm-row align-items-sm-center justify-content-center">
-                                <!-- <span>Quantity:</span>
-                                <div class="quantity_selector">
-                                    <span class="minus"><i class="fa fa-minus" aria-hidden="true"></i></span>
-                                    <span id="quantity_value">1</span>
-                                    <span class="plus"><i class="fa fa-plus" aria-hidden="true"></i></span>
-                                </div> -->
-                                <!-- <div class="red_button add_to_cart_button"><a href="#">공구개설</a></div> -->
 
                                 <!-- 공구 개설 modal ~ -->
                                 <div class="red_button add_to_cart_button">
@@ -192,26 +144,6 @@
                                                     <button class="btn btn-primary"
                                                         data-bs-target="#exampleModalToggle2"
                                                         data-bs-toggle="modal">개설하기</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="modal fade" id="exampleModalToggle2" aria-hidden="true"
-                                        aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
-                                        <div class="modal-dialog modal-dialog-centered">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">Modal 2
-                                                    </h1>
-                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                        aria-label="Close"></button>
-                                                </div>
-                                                <div class="modal-body">
-                                                    Hide this modal and show the first with the button below.
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <button class="btn btn-primary" data-bs-target="#exampleModalToggle"
-                                                        data-bs-toggle="modal">Back to first</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -397,8 +329,10 @@
     <script th:src="@{/js/jquery-3.6.4.min.js}"></script>
     <script th:src="@{/js/km/jquery-ui.js}"></script>
     <script th:src="@{/js/km/single_custom.js}"></script>
-    
+
     <script th:inline="javascript" type="text/javascript">
+        
+        // 카운트다운 타이머
         function CountDownTimer(dt, id) {
             var end = new Date(dt);
             var _second = 1000;
@@ -425,11 +359,39 @@
             }
             timer = setInterval(showRemaining, 1000);
         }
+        
+        const tbody = document.getElementById('tbody');
+        tbody.innerHTML = ''; // 초기화 해주기
+        const list = /*[[${ purchaseList }]]*/"";
 
-        var deadline = "<fmt:formatDate value="${obj.deadline}" pattern = "yyyy-MM-dd HH:mm:ss" /> "
-        CountDownTimer(deadline, 'clock');
+        console.log(list)
+        // 하나씩 꺼내기
+        for (let i=0; i<list.length; i++) {
+
+            let tmp = list[i];
+
+            var deadline = new Date(tmp.deadline);
+            CountDownTimer(deadline, `clock${i}`);
+            
+            var price = Math.floor(tmp.itemPrice / tmp.participant);
+            var price1 = price.toString().replace(/\B(?<!\.\d*)(?=(\d{3})+(?!\d))/g, ",") + '원';
+
+            console.log(tmp.deadline);
+            console.log(price);
+            console.log(price1);
+
+            tbody.innerHTML +=
+                `<tr>` +
+                    `<td scope="row">${tmp.purchaseNo}</td>` +
+                    `<td scope="row">${tmp.participant}</td>` +
+                    `<td>${tmp.remainingPerson}</td>` +
+                    `<td>${tmp.storageName}</td>` +
+                    `<td>` + price1 + `</td>` +
+                    '<td id="clock'+i+'">' + deadline + '</td>' +
+                    `<td><button class="btn participant-btn">참여</button></td>` +
+                `</tr>`;
+        }; 
     </script>
-
 
 
 </body>
