--- a/src/main/resources/templates/km/customer/selectitem.html
+++ b/src/main/resources/templates/km/customer/selectitem.html
@@ -21,7 +21,14 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-   
+    <style>
+        .single_product_image_background img {
+            padding-top: 10px !important;
+            width: 500px;
+        }
+    </style>
+
+
     <script th:src="@{/js/bootstrap.min.js}"></script>
     <!-- axios (https://cdnjs.com/libraries/axios) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js"
@@ -44,14 +51,14 @@
                         <!-- Breadcrumbs -->
                         <div class="breadcrumbs d-flex flex-row align-items-center">
                             <ul>
-                                <li><span th:text="${purchaseList[0].lCategoryName}"></span></li>
+                                <li><span th:text="${item.LCATEGORYNAME}"></span></li>
                                 <li>
                                     <i class="fa fa-angle-right" aria-hidden="true"></i>
-                                    <span th:text="${purchaseList[0].mCategoryName}"></span>
+                                    <span th:text="${item.MCATEGORYNAME}"></span>
                                 </li>
                                 <li class="active">
                                     <i class="fa fa-angle-right" aria-hidden="true"></i>
-                                    <a href="#" th:text="${purchaseList[0].sCategoryName}"></a>
+                                    <a href="#" th:text="${item.SCATEGORYNAME}"></a>
                                     <!-- /customer/item/selectlist.do?scode=4 -->
                                 </li>
                             </ul>
@@ -63,19 +70,8 @@
                 <div class="row">
                     <!-- 물품 간단 사진 영역 ~ -->
                     <div class="col-lg-6">
-                        <div class="single_product_pics">
-                            <div class="row">
-                                <div class="col-lg-9 image_col order-lg-2 order-1">
-                                    <div class="single_product_image">
-                                        <!-- <div class="single_product_image_background"
-                                            th:style="'background-image:url('+ @{/images/km/single_2.jpg} +');height: 500px;mt-5'">
-                                        </div> -->
-                                        <div class="single_product_image_background" style="height: 500px">
-                                            <img th:src="${imageList[0]}" alt="">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="single_product_image_background">
+                            <img th:src="@{/customer/image(no=${imgList[0]})}" alt="">
                         </div>
                     </div>
                     <!-- ~ 물품 간단 사진 영역 -->
@@ -84,9 +80,11 @@
                     <div class="col-lg-6">
                         <div class="product_details">
                             <div class="product_details_title">
-                                <p th:text="${purchaseList[0].sellerName}"></p>
-                                <h2 th:text="${purchaseList[0].itemName}"></h2>
-                                <div class="product_price" th:text="${#numbers.formatInteger(purchaseList[0].itemPrice, 3, 'COMMA') + '원'}"></div>
+                                <p th:text="${item.SELLERNAME}"></p>
+                                <h2 th:text="${item.ITEMNAME}"></h2>
+                                <div class="product_price"
+                                    th:text="${#numbers.formatInteger(item.ITEMPRICE, 3, 'COMMA') + '원'}">
+                                </div>
                             </div>
                             <!-- 열린 공구 영역 ~ -->
                             <div class="tablediv">
@@ -99,7 +97,7 @@
                                             <th scope="col">수령지점</th>
                                             <th scope="col">인당가격</th>
                                             <th scope="col">남은시간</th>
-                                            <th scope="col"></th>
+                                            <th scope="col">공구참여</th>
                                         </tr>
                                     </thead>
                                     <tbody id="tbody">
@@ -119,30 +117,36 @@
                                         <div class="modal-dialog modal-dialog-centered">
                                             <div class="modal-content">
                                                 <div class="modal-header">
-                                                    <h1 class="modal-title fs-5" id="exampleModalToggleLabel">Modal 1
+                                                    <h1 class="modal-title fs-5" id="exampleModalToggleLabel">참여인원,
+                                                        수령지점을 선택해주세요.
                                                     </h1>
                                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                         aria-label="Close"></button>
                                                 </div>
                                                 <div class="modal-body">
-
-                                                    <!-- single_custom.jsdml 209라인 (initQuantity() 함수)-->
-                                                    <span>Quantity:</span>
-                                                    <div class="quantity_selector">
-                                                        <span class="minus"><i class="fa fa-minus"
-                                                                aria-hidden="true"></i></span>
-                                                        <span id="quantity_value">1</span>
-                                                        <span class="plus"><i class="fa fa-plus"
-                                                                aria-hidden="true"></i></span>
+                                                    <!-- <input type="number" name="participant" value="2" id="participant" min="2" max="5"> -->
+                                                    <div class="modal-participant">
+                                                        <span>참여인원</span>
+                                                        <span class="minus">-</span>
+                                                        <span class="participant">2</span>
+                                                        <span class="plus">+</span>
                                                     </div>
-                                                    <!-- 참여인원 -->
 
-                                                    <!-- 수령지점 -->
+                                                    <div class="modal-storage">
+                                                        <span>수령지점</span>
+                                                        <select id="select">
+                                                            
+                                                        </select>
+                                                    </div>
+                                                    
+                                                    <div class="modal-totalcost">
+                                                        <span>인당 물품가격</span>
+                                                        <span id="totalcost"></span>
+                                                    </div>
 
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <button class="btn btn-primary"
-                                                        data-bs-target="#exampleModalToggle2"
+                                                    <button class="btn open-btn" data-bs-target="#exampleModalToggle2"
                                                         data-bs-toggle="modal">개설하기</button>
                                                 </div>
                                             </div>
@@ -162,70 +166,45 @@
 
             <!-- 물품 상세 영역 ~  -->
             <div class="tabs_section_container">
-
                 <div class="container">
                     <div class="row">
                         <div class="col">
                             <div class="tabs_container">
                                 <ul
                                     class="tabs d-flex flex-sm-row flex-column align-items-left align-items-md-center justify-content-center">
-                                    <li class="tab active" data-active-tab="tab_1"><span>Description</span></li>
-                                    <!-- <li class="tab" data-active-tab="tab_2"><span>Additional Information</span></li> -->
-                                    <li class="tab" data-active-tab="tab_3"><span>Reviews</span></li>
+                                    <li class="tab active" data-active-tab="tab_1"><span>물품상세</span></li>
+                                    <li class="tab" data-active-tab="tab_3"><span>리뷰</span></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
+                            <!-- 물품상세 영역 ~  -->
                             <div id="tab_1" class="tab_container active">
                                 <div class="row">
-                                    <div class="col-lg-5 desc_col">
-                                        <div class="tab_title">
-                                            <h4>Description</h4>
-                                        </div>
-                                        <div class="tab_text_block">
-                                            <h2>Pocket cotton sweatshirt</h2>
-                                            <p>Nam tempus turpis at metus scelerisque placerat nulla deumantos solicitud
-                                                felis. Pellentesque diam dolor, elementum etos lobortis des mollis ut...
-                                            </p>
-                                        </div>
-                                        <div class="tab_image">
-                                            <img th:src="@{/images/km/desc_1.jpg}">
-                                        </div>
-                                        <div class="tab_text_block">
-                                            <h2>Pocket cotton sweatshirt</h2>
-                                            <p>Nam tempus turpis at metus scelerisque placerat nulla deumantos solicitud
-                                                felis. Pellentesque diam dolor, elementum etos lobortis des mollis ut...
-                                            </p>
-                                        </div>
+                                    <div class="col-lg-12 desc_col">
+                                        <h4 class="tab_title">Description
+                                            <!-- <h4>Description</h4> -->
+                                        </h4>
                                     </div>
-                                    <div class="col-lg-5 offset-lg-2 desc_col">
+                                    <div class="col-lg-12 desc_col">
                                         <div class="tab_image">
-                                            <img th:src="@{/images/km/desc_2.jpg}">
-                                        </div>
-                                        <div class="tab_text_block">
-                                            <h2>Pocket cotton sweatshirt</h2>
-                                            <p>Nam tempus turpis at metus scelerisque placerat nulla deumantos solicitud
-                                                felis. Pellentesque diam dolor, elementum etos lobortis des mollis ut...
-                                            </p>
-                                        </div>
-                                        <div class="tab_image desc_last">
-                                            <img th:src="@{/images/km/desc_3.jpg}">
+                                            <img th:src="@{/customer/image(no=${imgList[1]})}">
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            <!-- ~ 물품상세 영역 -->
 
-
-
+                            <!-- 리뷰 영역 ~ -->
                             <div id="tab_3" class="tab_container">
                                 <div class="row">
 
                                     <div class="col-lg-6 reviews_col">
-                                        <div class="tab_title reviews_title">
-                                            <h4>Reviews</h4>
-                                        </div>
+                                        <h4 class="tab_title reviews_title">
+                                            Reviews
+                                        </h4>
 
                                         <div class="user_review_container d-flex flex-column flex-sm-row">
                                             <div class="user">
@@ -310,7 +289,7 @@
 
                                 </div>
                             </div>
-
+                            <!-- ~ 리뷰 영역 ~ -->
                         </div>
                     </div>
                 </div>
@@ -331,7 +310,7 @@
     <script th:src="@{/js/km/single_custom.js}"></script>
 
     <script th:inline="javascript" type="text/javascript">
-        
+
         // 카운트다운 타이머
         function CountDownTimer(dt, id) {
             var end = new Date(dt);
@@ -359,38 +338,92 @@
             }
             timer = setInterval(showRemaining, 1000);
         }
-        
+
+        // 열린 공구 목록 (tbody) 추가
         const tbody = document.getElementById('tbody');
         tbody.innerHTML = ''; // 초기화 해주기
         const list = /*[[${ purchaseList }]]*/"";
+        const itemprice = /*[[${item.ITEMPRICE}]]*/"";
 
         console.log(list)
         // 하나씩 꺼내기
-        for (let i=0; i<list.length; i++) {
+        if (list != null) {
+            for (let i = 0; i < list.length; i++) {
 
-            let tmp = list[i];
+                let tmp = list[i];
 
-            var deadline = new Date(tmp.deadline);
-            CountDownTimer(deadline, `clock${i}`);
-            
-            var price = Math.floor(tmp.itemPrice / tmp.participant);
-            var price1 = price.toString().replace(/\B(?<!\.\d*)(?=(\d{3})+(?!\d))/g, ",") + '원';
+                var deadline = new Date(tmp.deadline);
+                CountDownTimer(deadline, `clock${i}`);
 
-            console.log(tmp.deadline);
-            console.log(price);
-            console.log(price1);
+                var price = Math.floor(itemprice / tmp.participant);
+                var price1 = price.toString().replace(/\B(?<!\.\d*)(?=(\d{3})+(?!\d))/g, ",") + '원';
 
-            tbody.innerHTML +=
-                `<tr>` +
+                console.log(tmp.deadline);
+                console.log(price);
+                console.log(price1);
+
+                tbody.innerHTML +=
+                    `<tr>` +
                     `<td scope="row">${tmp.purchaseNo}</td>` +
                     `<td scope="row">${tmp.participant}</td>` +
                     `<td>${tmp.remainingPerson}</td>` +
                     `<td>${tmp.storageName}</td>` +
                     `<td>` + price1 + `</td>` +
-                    '<td id="clock'+i+'">' + deadline + '</td>' +
+                    '<td id="clock' + i + '">' + deadline + '</td>' +
                     `<td><button class="btn participant-btn">참여</button></td>` +
-                `</tr>`;
-        }; 
+                    `</tr>`;
+            };
+        };
+
+        // 공구개설 Modal -> select박스 추가
+        var select = document.querySelector('#select');
+        select.innerHTML = ''; // 초기화 해주기
+        const storageList = /*[[${storage}]]*/"";
+
+        console.log(storageList)
+        // 하나씩 꺼내기
+        select.innerHTML += `<option selected>국적선택</option>`;
+        if (storageList != null) {
+            for (let i = 0; i < storageList.length; i++) {
+
+                let tmp = storageList[i];
+
+                console.log(tmp.name)
+
+                select.innerHTML +=
+                        `<option>${tmp.name}</option>`;
+            };
+        };
+
+        // 공구개설 Modal -> participant 숫자 증감
+        const plus = document.querySelector(".plus");
+        const minus = document.querySelector(".minus");
+        var participant = document.querySelector(".participant");
+        let a = 2;
+
+        var totalcost = document.querySelector('#totalcost');
+        totalcost.innerHTML = (itemprice/2).toLocaleString() + '원';
+        
+        plus.addEventListener("click", () => {
+            if (a < 5) {
+                a++;
+                participant.innerHTML = a;
+            } else {
+                alert('최대 5명까지만 선택 가능합니다.')
+            }
+            totalcost.innerHTML =  (itemprice/a).toLocaleString() + '원';
+            console.log(a);
+        })
+        minus.addEventListener("click", () => {
+            if (a > 2) {
+                a--;
+                participant.innerHTML = a;
+            } else {
+                alert('2명 이상 선택 가능합니다.')
+            }
+            totalcost.innerHTML =  (itemprice/a).toLocaleString() + '원';
+            console.log(a);
+        });
     </script>
 
 
