--- a/src/main/resources/templates/jk/seller/mypage/updateinfo.html
+++ b/src/main/resources/templates/jk/seller/mypage/updateinfo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>회원정보수정(seller)</h3>
-    
-    <form th:action="@{/seller/updateinfo.do}" th:object="${seller}" method="post">
-        <input type="text" th:field="${seller.no}"  /><br />
-        <input type="text" th:field="${seller.name}" readonly /><br />
-        <input type="text" th:field="${seller.address}" /><br />
-        <input type="text" th:field="${seller.phone}" /><br />
-        <input type="text" th:field="${seller.email}" /><br />
-        <input type="submit" value="수정하기" />
-    </form>
-
+    /seller/updateinfo.do
 </body>
 </html>
